Adding Svelte Lib and Sveltekit sites

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "turborepo-basic-shared",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": false,
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -20,5 +20,8 @@
     "npm": ">=7.0.0",
     "node": ">=14.0.0"
   },
-  "packageManager": "npm@8.5.0"
+  "packageManager": "npm@8.5.0",
+  "dependencies": {
+    "@changesets/cli": "^2.22.0"
+  }
 }
