--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,9 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+      "outputs": ["dist/**", ".next/**", "svelte-kit/**"]
     },
     "lint": {
       "outputs": []
